--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -174,7 +174,7 @@ a{
             max-height: 89px;
             opacity: 0;
             
-            transition: opacity 0.4s, height 0.4s;
+            transition: opacity 0.4s;
             transition-delay: .1s;
             height: 0;
             line-height: 24px;
@@ -329,10 +329,11 @@ a{
     }
     &__handling{
         display: block;
+        
     }
     &__name{
         position: relative;
-        width: 220px;
+        width: 95%;
         margin-bottom: fluid(20px, 37px);
         &-title{
             font-size: fluid(16px, 18px);
@@ -359,9 +360,12 @@ a{
         align-items: center;
         
         &-icon{
+            width: 73px;
+            height: 73px;
             img{
-                width: 73px;
-                height: 73px;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
             }
             
         }
@@ -372,16 +376,17 @@ a{
             font-size: fluid(14px, 16px);
             line-height: fluid(20px, 24px);
             color: #141515;
-            width: fluid(220px, 240px);
+            
             margin-left: fluid(16px, 32px);
         }
         
     }
     &__change{
+        width: 100%;
         &-options{
             display: flex;
             align-items: center;
-            justify-content: end;
+            justify-content: flex-start;
             & + .slider__change-options{
                 margin-top: fluid(30px, 42px);
             }
@@ -392,10 +397,10 @@ a{
         &-item{
             font-size: fluid(26px, 32px);
             &--widthLeft{
-                width: fluid(168px, 210px);
+                width: 37%;
             }
             &--widthRight{
-                width: fluid(243px, 270px);
+                width: 37%;
             }
         }
     }
